--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
             href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="./src/styles/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Trebol De la Suerte</title>
     </head>
-    <body style="background-color: #262626">
+    <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
